--- a/白鹭/index.html
+++ b/白鹭/index.html
@@ -126,6 +126,9 @@
 			.hezuotupian{
 				width: 150px;
 				height: 40px;
+				border: black solid 1px;
+				margin: 10px 10px 10px 5px;
+				border-radius: 5px;
 			}
 		</style>
 	</head>
@@ -273,24 +276,24 @@
 			<div class="yinqin"><img style="width: 30px; height:30px;" src="img/3.png" /> 合作伙伴
 			</div>
 			<div class="hezuo layui-row">
-				<div class="hezuotupian layui-col-md2"><img style="width: 150px;height:50px;" src="img/kun.png"></div>
-				<div class="hezuotupian layui-col-md2"><img style="width: 150px;height:50px;" src="img/kun.png"></div>
-				<div class="hezuotupian layui-col-md2"><img style="width: 150px;height:50px;" src="img/kun.png"></div>
-				<div class="hezuotupian layui-col-md2"><img style="width: 150px;height:50px;" src="img/kun.png"></div>
-				<div class="hezuotupian layui-col-md2"><img style="width: 150px;height:50px;" src="img/kun.png"></div>
-				<div class="hezuotupian layui-col-md2"><img style="width: 150px;height:50px;" src="img/kun.png"></div>
-				<div class="hezuotupian layui-col-md2"><img style="width: 150px;height:50px;" src="img/ms.png"></div>
-				<div class="hezuotupian layui-col-md2"><img style="width: 150px;height:50px;" src="img/ms.png"></div>
-				<div class="hezuotupian layui-col-md2"><img style="width: 150px;height:50px;" src="img/ms.png"></div>
-				<div class="hezuotupian layui-col-md2"><img style="width: 150px;height:50px;" src="img/ms.png"></div>
-				<div class="hezuotupian layui-col-md2"><img style="width: 150px;height:50px;" src="img/ms.png"></div>
-				<div class="hezuotupian layui-col-md2"><img style="width: 150px;height:50px;" src="img/ms.png"></div>
-				<div class="hezuotupian layui-col-md2"><img style="width: 150px;height:50px;" src="img/oppo.png"></div>
-				<div class="hezuotupian layui-col-md2"><img style="width: 150px;height:50px;" src="img/oppo.png"></div>
-				<div class="hezuotupian layui-col-md2"><img style="width: 150px;height:50px;" src="img/oppo.png"></div>
-				<div class="hezuotupian layui-col-md2"><img style="width: 150px;height:50px;" src="img/oppo.png"></div>
-				<div class="hezuotupian layui-col-md2"><img style="width: 150px;height:50px;" src="img/oppo.png"></div>
-				<div class="hezuotupian layui-col-md2"><img style="width: 150px;height:50px;" src="img/oppo.png"></div>
+				<div class="hezuotupian layui-col-md2"><img style="width: 145px;height:35px;" src="img/kun.png"></div>
+				<div class="hezuotupian layui-col-md2"><img style="width: 145px;height:35px;" src="img/kun.png"></div>
+				<div class="hezuotupian layui-col-md2"><img style="width: 145px;height:35px;" src="img/kun.png"></div>
+				<div class="hezuotupian layui-col-md2"><img style="width: 145px;height:35px;" src="img/kun.png"></div>
+				<div class="hezuotupian layui-col-md2"><img style="width: 145px;height:35px;" src="img/kun.png"></div>
+				<div class="hezuotupian layui-col-md2"><img style="width: 145px;height:35px;" src="img/kun.png"></div>
+				<div class="hezuotupian layui-col-md2"><img style="width: 145px;height:35px;" src="img/ms.png"></div>
+				<div class="hezuotupian layui-col-md2"><img style="width: 145px;height:35px;" src="img/ms.png"></div>
+				<div class="hezuotupian layui-col-md2"><img style="width: 145px;height:35px;" src="img/ms.png"></div>
+				<div class="hezuotupian layui-col-md2"><img style="width: 145px;height:35px;" src="img/ms.png"></div>
+				<div class="hezuotupian layui-col-md2"><img style="width: 145px;height:35px;" src="img/ms.png"></div>
+				<div class="hezuotupian layui-col-md2"><img style="width: 145px;height:35px;" src="img/ms.png"></div>
+				<div class="hezuotupian layui-col-md2"><img style="width: 145px;height:35px;" src="img/oppo.png"></div>
+				<div class="hezuotupian layui-col-md2"><img style="width: 145px;height:35px;" src="img/oppo.png"></div>
+				<div class="hezuotupian layui-col-md2"><img style="width: 145px;height:35px;" src="img/oppo.png"></div>
+				<div class="hezuotupian layui-col-md2"><img style="width: 145px;height:35px;" src="img/oppo.png"></div>
+				<div class="hezuotupian layui-col-md2"><img style="width: 145px;height:35px;" src="img/oppo.png"></div>
+				<div class="hezuotupian layui-col-md2"><img style="width: 145px;height:35px;" src="img/oppo.png"></div>
 			</div>
 			<div style="margin-top: 20px;"><img style="width: 100%;" src="img/44.png"</div>
 
